fixed immutable objects

--- a/JAVA/0 Concepts/1. Immutable Objects.md
+++ b/JAVA/0 Concepts/1. Immutable Objects.md
@@ -1,72 +1,72 @@
-## Immutable Objects
+- ## Immutable Objects
 
-An immutable object is an object whose internal state remains constant after it has been entirely created.
-This means that the public API of an immutable object guarantees us that it will behave in the same way during its whole lifetime.
+  An immutable object is an object whose internal state remains constant after it has been entirely created.
+  This means that the public API of an immutable object guarantees us that it will behave in the same way during its whole lifetime.
 
-If we take a look at the class String, we can see that even when its API seems to provide us a mutable behavior with its replace method, the original String doesn’t change:
+  If we take a look at the class String, we can see that even when its API seems to provide us a mutable behavior with its replace method, the original String doesn’t change:
 
-```java
-String name = "baeldung";
-String newName = name.replace("dung", "----");
+  ```java
+  String name = "baeldung";
+  String newName = name.replace("dung", "----");
 
-assertEquals("baeldung", name);
-assertEquals("bael----", newName);
-```
+  assertEquals("baeldung", name);
+  assertEquals("bael----", newName);
+  ```
 
-## The final Keyword
+- ## The `final` Keyword
 
-In Java, variables are mutable by default, meaning we can change the value they hold.
-By using the final keyword when declaring a variable, the Java compiler won’t let us change the value of that variable. Instead, it will report a compile-time error:
+  In Java, variables are mutable by default, meaning we can change the value they hold.
+  By using the final keyword when declaring a variable, the Java compiler won’t let us change the value of that variable. Instead, it will report a compile-time error:
 
-```java
-final String name = "baeldung";
-name = "bael..."; // error
-```
+  ```java
+  final String name = "baeldung";
+  name = "bael..."; // error
+  ```
 
-Note that final only forbids us from changing the reference the variable holds, it doesn’t protect us from changing the internal state of the object it refers to by using its public API:
+  Note that final only forbids us from changing the reference the variable holds, it doesn’t protect us from changing the internal state of the object it refers to by using its public API:
 
-```java
-final List<String> strings = new ArrayList<>();
-assertEquals(0, strings.size());
-strings.add("baeldung");
-assertEquals(0, strings.size());
-```
+  ```java
+  final List<String> strings = new ArrayList<>();
+  assertEquals(0, strings.size());
+  strings.add("baeldung");
+  assertEquals(0, strings.size());
+  ```
 
-The second assertEquals will fail because adding an element to the list changes its size, therefore, it isn’t an immutable object.
+  The second assertEquals will fail because adding an element to the list changes its size, therefore, it isn’t an immutable object.
 
-Building the API of an immutable object requires us to guarantee that its internal state won’t change no matter how we use its API.
+  Building the API of an immutable object requires us to guarantee that its internal state won’t change no matter how we use its API.
 
-A step forward in the right direction is to use final when declaring its attributes:
+  A step forward in the right direction is to use final when declaring its attributes:
 
-```java
-class Money {
-    private final double amount;
-    private final Currency currency;
+  ```java
+  class Money {
+      private final double amount;
+      private final Currency currency;
 
-    // ...
-}
-```
+      // ...
+  }
+  ```
 
-Note that Java guarantees us that the value of amount won’t change, that’s the case with all primitive type variables.
+  Note that Java guarantees us that the value of amount won’t change, that’s the case with all primitive type variables.
 
-However, in our example we are only guaranteed that the currency won’t change, so we must rely on the Currency API to protect itself from changes.
+  However, in our example we are only guaranteed that the currency won’t change, so we must rely on the Currency API to protect itself from changes.
 
-Most of the time, we need the attributes of an object to hold custom values, and the place to initialize the internal state of an immutable object is its constructor:
+  Most of the time, we need the attributes of an object to hold custom values, and the place to initialize the internal state of an immutable object is its constructor:
 
-```java
-class Money {
-    // ...
-    public Money(double amount, Currency currency) {
-        this.amount = amount;
-        this.currency = currency;
-    }
+  ```java
+  class Money {
+      // ...
+      public Money(double amount, Currency currency) {
+          this.amount = amount;
+          this.currency = currency;
+      }
 
-    public Currency getCurrency() {
-        return currency;
-    }
+      public Currency getCurrency() {
+          return currency;
+      }
 
-    public double getAmount() {
-        return amount;
-    }
-}
-```
+      public double getAmount() {
+          return amount;
+      }
+  }
+  ```
