--- a/JAVA/5 or 1.5/2. Multithreading.md
+++ b/JAVA/5 or 1.5/2. Multithreading.md
@@ -4,39 +4,37 @@ is a process of executing multiple threads simultaneously.
 
 Multitasking can be achieved in two ways:
 
-1. ### Process-based Multitasking( Multiprocessing ):
+- ### 1. Process-based Multitasking( Multiprocessing ):
 
-   Each process has an address in memory.
-   In other words, each process allocates a separate memory area. Switching from one process to another requires some time for saving and loading registers, memory maps, updating lists, etc.
+  Each process has an address in memory.
+  In other words, each process allocates a separate memory area. Switching from one process to another requires some time for saving and loading registers, memory maps, updating lists, etc.
 
-2. ### Thread-based Multitasking(Multithreading):
-   Threads share the same address space. `A thread is lightweight`.
+- ### 2. Thread-based Multitasking( Multithreading ):
 
-### What is a Thread?
+  Threads share the same address space. `A thread is lightweight`.
 
-`A thread is a lightweight subprocess,the smallest unit of processing. It is a separate path of execution.`
+- ### What is a Thread?
 
-Threads are `independent`. If there occurs exception in one thread, it doesnt affect other threads.
-It uses a shared memory area.
+  `A thread is a lightweight subprocess, the smallest unit of processing. It is a separate path of execution.`
 
-`Thread` class extends `Object` class and implements `Runnable` interface.
+  Threads are `independent`. If there occurs exception in one thread, it doesnt affect other threads.
+  It uses a shared memory area.
 
-### Life cycle of a Thread (Thread States)?
+  `Thread` class extends `Object` class and implements `Runnable` interface.
 
-In Java, a thread always exists in any one of the following states. These states are:
+- ### Life cycle of a Thread ( Thread States )?
 
-1.  ### New
+  In Java, a thread always exists in any one of the following states. These states are:
+
+  - ### 1. New
 
     Whenever a new thread is created, it is always in the new state. For a thread in the new state, the code has not been run yet and thus has not begun its execution.
 
-2.  ### Active
+  - ### 2. Active
 
     When a thread invokes the `start()` method, it moves from the new state to the active state.
 
     The active state contains two states within it:
-
-    - one is `runnable`, and the other is
-    - `running`.
 
     - #### **Runnable**:
 
@@ -53,7 +51,7 @@ In Java, a thread always exists in any one of the following states. These states
 
       Whenever such a scenario occurs, all those threads that are willing to run, waiting for their turn to run, lie in the runnable state.
 
-      In the runnable state, there is a queue where the threads lie.
+      In the runnable state, there is a `queue` where the threads lie.
 
     - #### **Running**:
 
@@ -61,7 +59,7 @@ In Java, a thread always exists in any one of the following states. These states
 
       Generally, the most common change in the state of a thread is from runnable to running and again back to runnable.
 
-3.  #### Blocked / Waiting
+  - ### 3. Blocked / Waiting
 
     Whenever a thread is `inactive` for a span of time (`not permanently`) then, either the thread is in the `blocked state` `or` is in the `waiting state`.
 
@@ -88,7 +86,7 @@ In Java, a thread always exists in any one of the following states. These states
 
       It's waiting to be notified, typically by another thread (e.g., via `Object.notify()/notifyAll()`, or `LockSupport.unpark()`).
 
-4.  #### Timed Waiting
+  - ### 4. Timed Waiting
 
     Thus, thread lies in the waiting state for a specific span of time, and not forever.
 
@@ -97,7 +95,7 @@ In Java, a thread always exists in any one of the following states. These states
     The `sleep()` method puts the thread in the timed wait state.
     After the time runs out, the thread wakes up and start its execution from when it has left earlier.
 
-5.  #### Terminated
+  - ### 5. Terminated
 
     A thread reaches the termination state because of the following reasons:
 
@@ -106,158 +104,158 @@ In Java, a thread always exists in any one of the following states. These states
     - #### Abnormal termination:
       It occurs when some unusual events such as an `unhandled exception` or `segmentation fault`.
 
-### How to create a thread?
+- ### How to create a thread?
 
-There are two ways to create a thread:
+  There are two ways to create a thread:
 
-1.  #### By extending `Thread` class
+  1.  #### By extending `Thread` class
+
+      ```java
+      class Multi extends Thread{
+        public void run(){
+          System.out.println("thread is running...");
+        }
+        public static void main(String args[]){
+          Multi t1=new Multi();
+          t1.start();
+        }
+      }
+      ```
+
+  2.  #### By implementing `Runnable` interface.
+
+      ```java
+      class Multi3 implements Runnable{
+        public void run(){
+          System.out.println("thread is running...");
+        }
+
+        public static void main(String args[]){
+          Multi3 m1=new Multi3();
+          Thread t1 =new Thread(m1);   // Using the constructor Thread(Runnable r)
+          t1.start();
+        }
+
+      }
+      ```
+
+- ### What is Thread Scheduler in Java?
+
+  A component of Java that decides which thread to run or execute and which thread to wait is called a thread scheduler in Java.
+
+  There are two factors for scheduling a thread
+
+  i.e. Priority and Time of arrival.
+
+- ### What is Thread.sleep() in Java?
+
+  ```java
+  class TestSleepMethod1 extends Thread{
+    public void run(){
+      for(int i=1;i<5;i++){
+      // the thread will sleep for the 500 milli seconds
+      try{
+        Thread.sleep(500);
+      }catch(InterruptedException e){
+        System.out.println(e);
+      }
+      System.out.println(i);
+      }
+    }
+
+    public static void main(String args[]){
+      TestSleepMethod1 t1=new TestSleepMethod1();
+      TestSleepMethod1 t2=new TestSleepMethod1();
+
+      t1.start();
+      t2.start();
+    }
+  }
+
+  ```
+
+- ### Can we start a thread twice?
+
+  `No`. After starting a thread, it can never be started again.
+  If you does so, an `IllegalThreadStateException` is thrown.
+  In such case, thread will `run once` but for second time, it will throw `exception`.
+
+- ### What if we call Java `run()` method directly instead start() method?
+
+  Each thread starts in a separate call stack.
+  Invoking the `run()` method from the main thread, the `run()` method goes onto the current call stack rather than at the beginning of a new call stack.
+
+- ### Java `join()` method?
+
+  The `join()` method in Java is provided by the `java.lang.Thread` class that permits one thread to wait until the other thread to finish its execution
+
+  When the `join()` method is invoked, the current thread stops its execution and the thread goes into the wait state.
+
+  The current thread remains in the wait state until the thread on which the `join()` method is invoked called is dead
+  or the wait for the specified time frame(in milliseconds) is over.
+
+- ### Priority of a Thread (Thread Priority)?
+
+  Each thread has a priority.
+  Priorities are represented by a number between 1 and 10.
+  `3 constants` defined in Thread class:
+
+  ```java
+    public static int MIN_PRIORITY
+    public static int NORM_PRIORITY
+    public static int MAX_PRIORITY
+  ```
+
+- ### What is Java Shutdown Hook?
+
+  A special construct that facilitates the developers to add some code that has to be run when the `Java Virtual Machine (JVM) is shutting down` is known as the Java shutdown hook.
+
+- ### Java Garbage Collection?
+
+  In java, garbage means unreferenced objects.
+
+  Garbage Collection is process of reclaiming the runtime unused memory automatically. In other words, it is a way to destroy the unused objects.
+
+- ### How can an object be unreferenced?
+
+  - #### By nulling the reference
 
     ```java
-    class Multi extends Thread{
-    	public void run(){
-    	  System.out.println("thread is running...");
-    	}
-    	public static void main(String args[]){
-    	  Multi t1=new Multi();
-    	  t1.start();
-    	}
-    }
+      Employee e=new Employee();
+      e=null;
     ```
 
-2.  #### By implementing `Runnable` interface.
+  - #### By assigning a reference to another
 
     ```java
-    class Multi3 implements Runnable{
-    	public void run(){
-    	  System.out.println("thread is running...");
-    	}
-
-    	public static void main(String args[]){
-    		Multi3 m1=new Multi3();
-    		Thread t1 =new Thread(m1);   // Using the constructor Thread(Runnable r)
-    		t1.start();
-    	}
-
-    }
+      Employee e1=new Employee();
+      Employee e2=new Employee();
+      e1=e2;//now the first object referred by e1 is available for garbage collection
     ```
 
-### What is Thread Scheduler in Java?
+  - #### By anonymous object etc.
 
-A component of Java that decides which thread to run or execute and which thread to wait is called a thread scheduler in Java.
+    ```java
+      new Employee();
+    ```
 
-There are two factors for scheduling a thread
+- ### finalize() method:
 
-i.e. Priority and Time of arrival.
+  The finalize() method is invoked each time before the object is garbage collected.
 
-### What is Thread.sleep() in Java?
+  This method can be used to perform cleanup processing. This method is defined in Object class as
 
-```java
-class TestSleepMethod1 extends Thread{
-	public void run(){
-		for(int i=1;i<5;i++){
-		// the thread will sleep for the 500 milli seconds
-		try{
-			Thread.sleep(500);
-		}catch(InterruptedException e){
-			System.out.println(e);
-		}
-		System.out.println(i);
-		}
-	}
+  ```java
+      protected void finalize(){}
+  ```
 
-	public static void main(String args[]){
-		TestSleepMethod1 t1=new TestSleepMethod1();
-		TestSleepMethod1 t2=new TestSleepMethod1();
+- ### `gc()` method
 
-		t1.start();
-		t2.start();
-	}
- }
+  The gc() method is used to invoke the garbage collector to perform cleanup processing.
+  The gc() is found in System and Runtime classes.
 
-```
+  - ### Note:
 
-### Can we start a thread twice?
+    The Garbage collector of JVM collects only those objects that are created by `new` keyword.
 
-`No`. After starting a thread, it can never be started again.
-If you does so, an `IllegalThreadStateException` is thrown.
-In such case, thread will `run once` but for second time, it will throw `exception`.
-
-### What if we call Java `run()` method directly instead start() method?
-
-Each thread starts in a separate call stack.
-Invoking the `run()` method from the main thread, the `run()` method goes onto the current call stack rather than at the beginning of a new call stack.
-
-### Java `join()` method?
-
-The `join()` method in Java is provided by the `java.lang.Thread` class that permits one thread to wait until the other thread to finish its execution
-
-When the `join()` method is invoked, the current thread stops its execution and the thread goes into the wait state.
-
-The current thread remains in the wait state until the thread on which the `join()` method is invoked called is dead
-or the wait for the specified time frame(in milliseconds) is over.
-
-### Priority of a Thread (Thread Priority)?
-
-Each thread has a priority.
-Priorities are represented by a number between 1 and 10.
-`3 constants` defined in Thread class:
-
-```java
-	public static int MIN_PRIORITY
-	public static int NORM_PRIORITY
-	public static int MAX_PRIORITY
-```
-
-### What is Java Shutdown Hook?
-
-A special construct that facilitates the developers to add some code that has to be run when the `Java Virtual Machine (JVM) is shutting down` is known as the Java shutdown hook.
-
-### Java Garbage Collection?
-
-In java, garbage means unreferenced objects.
-
-Garbage Collection is process of reclaiming the runtime unused memory automatically. In other words, it is a way to destroy the unused objects.
-
-### How can an object be unreferenced?
-
-- #### By nulling the reference
-
-```java
-  Employee e=new Employee();
-  e=null;
-```
-
-- #### By assigning a reference to another
-
-```java
-  Employee e1=new Employee();
-  Employee e2=new Employee();
-  e1=e2;//now the first object referred by e1 is available for garbage collection
-```
-
-- #### By anonymous object etc.
-
-```java
-  new Employee();
-```
-
-### finalize() method:
-
-The finalize() method is invoked each time before the object is garbage collected.
-
-This method can be used to perform cleanup processing. This method is defined in Object class as
-
-```java
-    protected void finalize(){}
-```
-
-### `gc()` method
-
-The gc() method is used to invoke the garbage collector to perform cleanup processing.
-The gc() is found in System and Runtime classes.
-
-### Note:
-
-The Garbage collector of JVM collects only those objects that are created by `new` keyword.
-
-So if you have created any object without new, you can use finalize method to perform cleanup processing (destroying remaining objects).
+    So if you have created any object without new, you can use finalize method to perform cleanup processing (destroying remaining objects).
