fixed stream operations

--- a/JAVA/8/4. Stream operations.md
+++ b/JAVA/8/4. Stream operations.md
@@ -1,41 +1,41 @@
-### How to sort a list using lambda?
+- ### How to sort a list using lambda?
 
-```java
-Collections.sort(list); // ascending
-Collections.reverse(list); // descending
-sysout(list);
+  ```java
+  Collections.sort(list); // ascending
+  Collections.reverse(list); // descending
+  sysout(list);
 
-    list.stream()
-    	.sorted()
-    	.forEach(s -> sysout(s)); // ascending
+     list.stream()
+        .sorted()
+        .forEach(s -> sysout(s)); // ascending
 
-    list.stream()
-    	.sorted(Comparator.reverseOrder)
-    	.forEach(s -> sysout(s)); // descending
+     list.stream()
+        .sorted(Comparator.reverseOrder)
+        .forEach(s -> sysout(s)); // descending
 
-    Collections.sort(employees, (o1, o2) -> (int) (o1.getSalary() - o2.getSalary()));
+     Collections.sort(employees, (o1, o2) -> (int) (o1.getSalary() - o2.getSalary()));
 
-    sysout(employees);
+     sysout(employees);
 
-    employees.stream()
-    	.sorted((o1, o2) -> (int) (o1.getSalary() - o2.getSalary()))
-    	.forEach(t -> sysout(""))
+     employees.stream()
+        .sorted((o1, o2) -> (int) (o1.getSalary() - o2.getSalary()))
+        .forEach(t -> sysout(""))
 
-    // we can also directly pass the lambda reference
-    employees.stream()
-    	.sorted(Comparator.comparing(emp -> emp.getSalary()))
-    	.forEach(t -> sysout(""))
+     // we can also directly pass the lambda reference
+     employees.stream()
+        .sorted(Comparator.comparing(emp -> emp.getSalary()))
+        .forEach(t -> sysout(""))
 
-    // we can also directly pass the method reference
-    employees.stream()
-    	.sorted(Comparator.comparing(Employee::getName))
-    	.forEach(t -> sysout(""))
-```
+     // we can also directly pass the method reference
+     employees.stream()
+        .sorted(Comparator.comparing(Employee::getName))
+        .forEach(t -> sysout(""))
+  ```
 
-### How to sort a map using lambda?
+- ### How to sort a map using lambda?
 
-```java
-public class Employee implements Comparable<Employee> {
+  ```java
+  public class Employee implements Comparable<Employee> {
 
         private Long id;
         private String name;
@@ -45,81 +45,81 @@ public class Employee implements Comparable<Employee> {
         // override equals and hashCode
         @Override
         public int compareTo(Employee employee) {
-            return (int)(this.id - employee.getId());
+              return (int)(this.id - employee.getId());
         }
-    }
+     }
 
-    Map<String, Employee> map = new HashMap<>();
+     Map<String, Employee> map = new HashMap<>();
 
-    Employee employee1 = new Employee(1L, "Mher");
-    map.put(employee1.getName(), employee1);
-    Employee employee2 = new Employee(22L, "Annie");
-    map.put(employee2.getName(), employee2);
-    Employee employee3 = new Employee(8L, "John");
-    map.put(employee3.getName(), employee3);
-    Employee employee4 = new Employee(2L, "George");
-    map.put(employee4.getName(), employee4);
-```
+     Employee employee1 = new Employee(1L, "Mher");
+     map.put(employee1.getName(), employee1);
+     Employee employee2 = new Employee(22L, "Annie");
+     map.put(employee2.getName(), employee2);
+     Employee employee3 = new Employee(8L, "John");
+     map.put(employee3.getName(), employee3);
+     Employee employee4 = new Employee(2L, "George");
+     map.put(employee4.getName(), employee4);
+  ```
 
-1. #### Using a TreeMap:
+  1.  #### Using a TreeMap:
 
-   keys in TreeMap are sorted using their natural order.
+      keys in TreeMap are sorted using their natural order.
 
-```java
-   TreeMap<String, Employee> sorted = new TreeMap<>(map);
-```
+  ```java
+     TreeMap<String, Employee> sorted = new TreeMap<>(map);
+  ```
 
-2. #### Using ArrayList:
+  2.  #### Using ArrayList:
 
-```java
-   List<String> employeeByKey = new ArrayList<>(map.keySet());
-   Collections.sort(employeeByKey);
-```
+  ```java
+     List<String> employeeByKey = new ArrayList<>(map.keySet());
+     Collections.sort(employeeByKey);
+  ```
 
-3. #### Sort by Value:
+  3.  #### Sort by Value:
 
-```java
-   List<Employee> employeeById = new ArrayList<>(map.values());
-   Collections.sort(employeeById);
-```
+  ```java
+     List<Employee> employeeById = new ArrayList<>(map.values());
+     Collections.sort(employeeById);
+  ```
 
-4. #### Using a TreeSet:
+  4.  #### Using a TreeSet:
 
-```java
-   SortedSet<String> keySet = new TreeSet<>(map.keySet());
-   SortedSet<Employee> values = new TreeSet<>(map.values());
-```
+  ```java
+     SortedSet<String> keySet = new TreeSet<>(map.keySet());
+     SortedSet<Employee> values = new TreeSet<>(map.values());
+  ```
 
-5. #### Using Lambdas and Streams:
+  5.  #### Using Lambdas and Streams:
 
-   Since the Java 8, we can use the Stream API and lambda expressions to sort the map. All we need is to call the sorted method over the map's stream pipeline.
+      Since the Java 8, we can use the Stream API and lambda expressions to sort the map. All we need is to call the sorted method over the map's stream pipeline.
 
-```java
+  ```java
 
-   map.entrySet()
-   .stream()
-   .sorted(Map.Entry.<String, Employee>comparingByKey())
-   .forEach(System.out::println);
+     map.entrySet()
+     .stream()
+     .sorted(Map.Entry.<String, Employee>comparingByKey())
+     .forEach(System.out::println);
 
-   map.entrySet()
-   .stream()
-   .sorted(Map.Entry.comparingByValue())
-   .forEach(System.out::println);
-```
+     map.entrySet()
+     .stream()
+     .sorted(Map.Entry.comparingByValue())
+     .forEach(System.out::println);
+  ```
 
 - ### Difference between `map()` and `flatMap()` method?
 
-Both these methods are intermediate methods
-and returns another stream as part of the output.
+  Both these methods are intermediate methods
+  and returns another stream as part of the output.
 
-- `map()` method used for transformation.
-  takes Stream<T> as input and return Stream<R>
-  Its mapper function produces one value for each input value.
-  hence it is also called One-to-One mapping
+  - `map()` method used for transformation.
+    takes Stream<T> as input and return Stream<R>
+    Its mapper function produces one value for each input value.
+    hence it is also called One-to-One mapping
 
-- `flatMap()` used for transformation & flattening.
-  takes Stream of streams as input and return Stream
-  Its mapper function produces multiple value for each input value.
+  - `flatMap()` used for transformation & flattening.
+    takes Stream of streams as input and return Stream
+    Its mapper function produces multiple value for each input value.
 
   hence it is also called One-to-Many mapping
 
