--- a/JAVA/Collections Framework/2. List Interface.md
+++ b/JAVA/Collections Framework/2. List Interface.md
@@ -26,7 +26,7 @@ The `List` interface extends the `Collection` interface and represents an ordere
 
 ## Key Implementations:
 
-- **ArrayList**
+- **1. ArrayList**
 
   - **_Description_**: ArrayList is a resizable-array implementation of the List interface. It provides fast random access and is very efficient for read operations. However, the insertion and deletion of elements can be slow, especially in the middle of the list, as elements need to be shifted.
 
@@ -48,7 +48,7 @@ The `List` interface extends the `Collection` interface and represents an ordere
 
   ```
 
-- **LinkedList**
+- **2. LinkedList**
 
   **_Description_**: LinkedList is implemented as a double-linked list. It's efficient for adding and removing elements at both the beginning and the end of the list, making it a good choice for implementing stacks and queues.
 
@@ -68,7 +68,7 @@ The `List` interface extends the `Collection` interface and represents an ordere
     linkedList.removeFirst(); // Remove first element
   ```
 
-- **Vector**
+- **3. Vector**
 
   **_Description_**: Vector is similar to ArrayList, but it is synchronized, which means it is thread-safe. However, this synchronization leads to a performance hit.
 
@@ -88,7 +88,7 @@ The `List` interface extends the `Collection` interface and represents an ordere
     vector.elementAt(2); // Access element at index 2
   ```
 
-- **Stack**
+- **4. Stack**
 
   **_Description_**: Stack is a subclass of Vector that implements a standard last-in-first-out stack. It provides methods like `push`, `pop`, and `peek`.
 
