--- a/JAVA/Collections Framework/3. Set Interface.md
+++ b/JAVA/Collections Framework/3. Set Interface.md
@@ -24,7 +24,7 @@ The `Set` interface extends the `Collection` interface and represents a collecti
 
 ## Implementations:
 
-- **HashSet**
+- **1. HashSet**
 
   - **_Description_**: `HashSet` uses a hash table for storage, ensuring no duplicates are stored. It offers `constant time performance` for basic operations (`add, remove, contains, size`), assuming the hash function disperses elements properly.
 
@@ -44,7 +44,7 @@ The `Set` interface extends the `Collection` interface and represents a collecti
   System.out.println(hashSet.contains("Banana")); // true
   ```
 
-- **LinkedHashSet**
+- **2. LinkedHashSet**
 
   - **_Description_**: `LinkedHashSet` is an ordered version of HashSet that maintains a `doubly-linked list` across all elements. It offers a predictable iteration order, which is the order in which elements were inserted.
 
@@ -65,7 +65,7 @@ The `Set` interface extends the `Collection` interface and represents a collecti
   }
   ```
 
-- **TreeSet**
+- **3. TreeSet**
 
   - **_Description_**: `TreeSet` is implemented based on a TreeMap (`a Red-Black tree`). It stores elements in a sorted (`ascending`) order, either by their natural ordering or by a `comparator` provided at set creation time.
 
