--- a/JAVA/Collections Framework/4. Queue Interface.md
+++ b/JAVA/Collections Framework/4. Queue Interface.md
@@ -21,7 +21,7 @@ Queues typically, but not necessarily, order elements in a `FIFO (first-in-first
 
 ## Implementations:
 
-- **LinkedList**
+- **1. LinkedList**
 
   - **_Description_**: LinkedList is a doubly-linked list implementation that can be used both as a list and a queue. It implements the Queue interface, providing FIFO (First-In-First-Out) queue operations.
 
@@ -41,7 +41,7 @@ Queues typically, but not necessarily, order elements in a `FIFO (first-in-first
   System.out.println(linkedListQueue.peek()); // Returns "Bob" without removing
   ```
 
-- **PriorityQueue**
+- **2. PriorityQueue**
 
   - **_Description_**: `PriorityQueue` is based on a priority heap. Elements of the priority queue are ordered according to their `natural ordering`, or by a `comparator` provided at queue construction time.
 
@@ -64,7 +64,7 @@ Queues typically, but not necessarily, order elements in a `FIFO (first-in-first
 
     ```
 
-- **ArrayDeque**
+- **3. ArrayDeque**
 
   - **_Description_**:
     `ArrayDeque` is a resizable-array implementation of the `Deque interface`. It can be used as both a `last-in-first-out (LIFO) stack` and a `first-in-first-out (FIFO) queue`.
