--- a/JAVA/Collections Framework/5. Map Interface.md
+++ b/JAVA/Collections Framework/5. Map Interface.md
@@ -30,7 +30,7 @@ The `Map` interface represents a collection that maps keys to values. A map `can
 
 ## Implementations:
 
-- **HashMap**
+- **1. HashMap**
 
   - **_Description_**: `HashMap` is an implementation of the Map interface that uses a `hash table`. It stores the data in key-value pairs and uses `hashing` to retrieve the stored values efficiently.
 
@@ -51,7 +51,7 @@ The `Map` interface represents a collection that maps keys to values. A map `can
   System.out.println(hashMap.get("Apple")); // 40
   ```
 
-- **LinkedHashMap**
+- **2. LinkedHashMap**
 
   - **_Description_**: `LinkedHashMap` is a hash table and linked list implementation of the Map interface. It maintains a linked list of the entries in the map, in the order in which they were inserted.
 
@@ -75,7 +75,7 @@ The `Map` interface represents a collection that maps keys to values. A map `can
 
   ```
 
-- **TreeMap**
+- **3. TreeMap**
 
   - **_Description_**: `TreeMap` is a `Red-Black tree-based` implementation of the Map interface. It stores entries in `sorted order` according to the natural ordering of its keys, or by a `Comparator` provided at map creation time.
 
@@ -99,7 +99,7 @@ The `Map` interface represents a collection that maps keys to values. A map `can
 
   ```
 
-- **Hashtable**
+- **4. Hashtable**
 
   **_Description_**: `Hashtable` is a `synchronized` implementation of Map. `Similar to HashMap`, it stores elements in key-value pairs but synchronizes access to the elements.
 
